# pycodif

./: .gitignore  .pre-commit-config.yaml  README.md  hatch.toml  pyproject.toml
.github/workflows/: run-tests.yaml
notebooks/: beamforming.ipynb  channelize.ipynb  get_first_thread.ipynb  util.py
pycodif/: parsing.py
src/pycodif/: __init__.py  constants.py  date_functions.py  parsing.py
tests/: test_date_functions.py  test_parsing.py
tests/test_files/: test_codif.codif  test_codif_two_packets.codif
