[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycodif"
description = "A package to decode CODIF files for radio astronomy data."
authors = [{ name = "Jay Smallwood", email = "justin.d.smallwood@gmail.com" }]
dependencies = [
    "numpy>2.0.0",
    "matplotlib",
    "tqdm",
    "loguru",
    "scipy",
]
dynamic = ["version"]
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
    "nbstripout",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pycodif"] 


[tool.hatch.version]
path = "src/pycodif/_version.py"

[tool.ruff.lint]
extend-select = ["I"] # allows import sorting